--- a/style.css
+++ b/style.css
@@ -27,14 +27,21 @@
   border-radius: 2rem;
 }
 
-h3 {
-  text-align: center;
-}
-
 .header {
   background-color: rgb(207, 226, 255);
   border-radius: 2rem;
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
   width: auto;
+}
+h2 {
+  padding: 1rem;
+}
+
+h5 {
+  padding: 1rem;
+}
+
+h3 {
+  text-align: center;
 }
